[gd_scene load_steps=17 format=3 uid="uid://byd84jewx46dk"]

[ext_resource type="Script" path="res://Scenes/levels/Main_Scene.gd" id="1_3cfv0"]
[ext_resource type="PackedScene" uid="uid://fudelpco8kl2" path="res://Scenes/player/player.tscn" id="1_ew48u"]
[ext_resource type="PackedScene" uid="uid://bvx41i5ec3766" path="res://Scenes/environment/solid.tscn" id="2_lamht"]
[ext_resource type="Texture2D" uid="uid://gkxqnwdf5bns" path="res://Assets/sample_background/Night City Background Image 2 Madfireon.png" id="4_jmoja"]
[ext_resource type="PackedScene" uid="uid://b53e7mlrhngq" path="res://Scenes/enemies/enemy.tscn" id="4_p0hfu"]
[ext_resource type="PackedScene" uid="uid://cupum186bpfhd" path="res://Scenes/ui/pause_menu.tscn" id="5_3klmo"]
[ext_resource type="PackedScene" uid="uid://c7k50443ht0kh" path="res://Scenes/enemies/dragon.tscn" id="5_miogr"]
[ext_resource type="PackedScene" uid="uid://cuvuy3t7tditb" path="res://Scenes/enemies/helicopter.tscn" id="6_of0mm"]
[ext_resource type="Texture2D" uid="uid://ba5pbf053r6wl" path="res://Sprites/Models/ShadowOrb/Orbanim1.png" id="9_sikbu"]
[ext_resource type="Texture2D" uid="uid://1hd4sn6b06qj" path="res://Sprites/Models/ShadowOrb/Orbanim2.png" id="10_61kyp"]
[ext_resource type="Texture2D" uid="uid://ehdsctwyyk04" path="res://Sprites/Models/ShadowOrb/Orbanim3.png" id="11_pcabj"]
[ext_resource type="AudioStream" uid="uid://b2sey12bcce80" path="res://Assets/Audio/5_s2.mp3" id="12_vvs0n"]
[ext_resource type="Script" path="res://Scripts/ui/audio_looping.gd" id="13_tks2m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d6pei"]
size = Vector2(20, 400)

[sub_resource type="SpriteFrames" id="SpriteFrames_eoyhx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_sikbu")
}, {
"duration": 1.0,
"texture": ExtResource("10_61kyp")
}, {
"duration": 1.0,
"texture": ExtResource("11_pcabj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_cyfvb"]

[node name="Main" type="Node2D"]
scale = Vector2(0.999697, 1)
script = ExtResource("1_3cfv0")

[node name="Ground" parent="." instance=ExtResource("2_lamht")]
position = Vector2(20710.3, 634)
scale = Vector2(89.8362, 1.59216)

[node name="BackWall" type="StaticBody2D" parent="."]
position = Vector2(-5, 411)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackWall"]
shape = SubResource("RectangleShape2D_d6pei")

[node name="No Further Bruv" type="CollisionShape2D" parent="BackWall"]
position = Vector2(26784.1, -11)
shape = SubResource("RectangleShape2D_d6pei")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1275, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(638, 406)
scale = Vector2(0.996024, 1.18757)
texture = ExtResource("4_jmoja")

[node name="Player" parent="." instance=ExtResource("1_ew48u")]
position = Vector2(84.0254, 506)

[node name="PauseMenu" parent="Player" instance=ExtResource("5_3klmo")]
visible = false
offset_left = -58.5062
offset_top = -101.0
offset_right = -58.5062
offset_bottom = -101.0

[node name="Dragon" parent="." instance=ExtResource("5_miogr")]
position = Vector2(16668, 510)

[node name="Helicopter" parent="." instance=ExtResource("6_of0mm")]
position = Vector2(23584.1, 204)

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource("4_p0hfu")]
position = Vector2(567, 580)

[node name="Enemy2" parent="Enemies" instance=ExtResource("4_p0hfu")]
position = Vector2(735.051, 580)

[node name="Enemy3" parent="Enemies" instance=ExtResource("4_p0hfu")]
position = Vector2(903.102, 580)

[node name="Enemy4" parent="Enemies" instance=ExtResource("4_p0hfu")]
position = Vector2(1086.33, 580)

[node name="Enemy5" parent="Enemies" instance=ExtResource("4_p0hfu")]
position = Vector2(1295.22, 580)

[node name="Enemy6" parent="Enemies" instance=ExtResource("4_p0hfu")]
position = Vector2(2559.6, 420)

[node name="Enemy7" parent="Enemies" instance=ExtResource("4_p0hfu")]
position = Vector2(2399.56, 420)

[node name="Enemy8" parent="Enemies" instance=ExtResource("4_p0hfu")]
position = Vector2(2287.52, 420)

[node name="Enemy9" parent="Enemies" instance=ExtResource("4_p0hfu")]
position = Vector2(2111.47, 420)

[node name="Enemy10" parent="Enemies" instance=ExtResource("4_p0hfu")]
position = Vector2(1943.42, 420)

[node name="Enemy11" parent="Enemies" instance=ExtResource("4_p0hfu")]
position = Vector2(1847.39, 572)

[node name="Enemy12" parent="Enemies" instance=ExtResource("4_p0hfu")]
position = Vector2(2575.61, 572)

[node name="Enemy13" parent="Enemies" instance=ExtResource("4_p0hfu")]
position = Vector2(3119.77, 572)

[node name="Enemy14" parent="Enemies" instance=ExtResource("4_p0hfu")]
position = Vector2(3279.82, 572)

[node name="Enemy15" parent="Enemies" instance=ExtResource("4_p0hfu")]
position = Vector2(2855.69, 572)

[node name="ShadowOrb" type="AnimatedSprite2D" parent="."]
position = Vector2(25382.7, 504)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_eoyhx")
frame_progress = 0.709493

[node name="Area2D" type="Area2D" parent="ShadowOrb"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShadowOrb/Area2D"]
scale = Vector2(1.98784, 2.00535)
shape = SubResource("CircleShape2D_cyfvb")

[node name="Level_Music" type="AudioStreamPlayer2D" parent="."]
position = Vector2(11124.4, 17)
scale = Vector2(1.03308, 1)
stream = ExtResource("12_vvs0n")
volume_db = -10.0
autoplay = true
max_distance = 1e+12
script = ExtResource("13_tks2m")

[connection signal="area_entered" from="ShadowOrb/Area2D" to="." method="_on_area_2d_area_entered"]
